# HW4

./: .env-example  .gitignore  README.md  pyproject.toml
config/: logging_config.json  rate_limits.json  setup.json
data/: questions.template.yaml  questions.yaml
docs/: PLAN.md  PRD.md  PRD_agent_evaluation.md  PRD_agent_orchestration.md  PRD_defect_detection.md  PRD_fix_loop.md  PRD_gatekeeper.md  PRD_graph_pipeline.md  PRD_token_experiment.md  PROMPTS.md  SCORING_RUBRIC.md  SKILL.md  SKILL_token_experiment.md  TARGET_REPO.md  TODO.md  submission_report.html
examples/buggy-python/: README.md  THE_FIX.patch
notebooks/: analysis.ipynb
results/: BUG_ANALYSIS.md  BUG_ANALYSIS_buggy_python.md  CONFUSION_MATRIX.md  FINDINGS.md  FINDINGS.template.md  REPORT.md  agent_analysis.md  confusion_matrix.json  dashboard.md  findings.json  ledger.jsonl  loop_log.json  validated.json
results/buggy_python/: GRAPH_REPORT.md  graph.json  graph_before.json  metrics.json
results/experiment/: SCORING.md  blinding_key.json  comparison.json  comparison_run1.json  comparison_run2.json  condition_A.json  condition_B.json  condition_B_run1.json  scores_llm_judge.jsonl  scoring_sheet.json  scoring_worksheet.csv
results/patches/: exploratory-facade-extract.patch  exploratory-helpers.py
scripts/: build_notebook.py  check_gates.py  execute_notebook.py  graph_to_vault.py  render_graph.py
src/hw4/: __init__.py  constants.py  main.py
tests/fixtures/: mini_repo_answer_key.json
tests/unit/: test_agents.py  test_concurrency.py  test_config.py  test_confusion.py  test_constants.py  (+35 more)
(+246 files in other folders)
