[project]
name = "hw4"
version = "1.0.0"
description = "EX04 - Graph-based reverse engineering with architectural-bug-fixing AI agents"
authors = [{ name = "Yosef Shanaa" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "crewai>=1.14.7",
    "openai>=2.41.1",
]

[project.scripts]
hw4 = "hw4.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hw4"]

[tool.ruff]
# notebook cells use chart idiom (semicolons, late imports) by convention;
# examples/ vendors a real external buggy repo verbatim (not our code to lint)
extend-exclude = ["notebooks", "results/patches", "examples"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
# fixture repos carry their own pytest suites — ours must not collect them
norecursedirs = ["tests/fixtures"]

[tool.coverage.run]
source = ["src"]
omit = ["src/hw4/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
